@@ -3,6 +3,8 @@
 	* bin/cygbuild.sh (CygbuildMakefileRunInstallPythonMain): Set
 	prefix to /usr, not /usr/share. Rewrote input argument
 	handling to use shift and $@.
+	(CygbuildCmdInstallCheckDirStructure): Warn about deprecated
+	X11R6 directory.
 
 2007-09-10  Jari Aalto  <jari.aalto@cante.net>
 
